# Fluids

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  TODO.md  vcpkg.json
lib/imgui/: CMakeLists.txt
src/: .clang-format  FluidMatrix.cpp  FluidMatrix.h  Utils.cpp  Utils.hpp  fluid2d.cpp  fluid2d.hpp  globals.cpp  globals.hpp  gui.cpp  gui.cu  gui.hpp  gui.hu  main.cpp  main.hpp  ppm.h  renderer.cpp  renderer.hpp  simulation_settings.hpp  utils.cpp  utils.h  utils.hpp
src/fluids/: CUDAFluidMatrix.cu  CUDAFluidMatrix.cuh  FluidMatrix.c  FluidMatrix.cpp  FluidMatrix.cu  FluidMatrix.h  FluidMatrix.hu  fluid.cpp  fluid.hpp  fluid2d.cpp  fluid2d.hpp  fluid_matrix.cpp  fluid_matrix.cu  fluid_matrix.hpp
src/shaders/: density.frag  fragmentShader.fsh  velocity.frag  velocity.vert  vertex.vs  vertexShader.vsh  vorticity.frag
test/: test.cpp  test.cu  test.hpp
tests/: plotter.py  test_fluid_matrix.hpp  test_performance.cpp
